--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -13,11 +13,11 @@
 
 .logo {
   cursor: pointer;
-  border-radius: 8px;
+  border-radius: 40px;
 }
 
 .side-menu {
-  background-color: #fff;
+  background-color: rgb(255, 255, 255);
   position: fixed;
   width: 210px;
   padding: 25px;
